# bm-daq

./: CMakeLists.txt  README  build_and_test.sh  install_build_and_test.sh  install_third_party.sh
conf/: babyMIND-config.json
doc/: dox_config
src/: BMDDataHeaders.h  BMDDataLib-inl.h  BMDDataLib.cpp  BMDDataLib.h  BMDDeff.h  BMDGui.cpp  BMDGui.h  BMDStateMachine.cpp  BMDStateMachine.h  BMDWorkers.cpp  BMDWorkers.h  CMakeLists.txt
tests/: CMakeLists.txt  FakeData.cpp  FakeData.h  TestDataLib.cpp  TestDataLib.h  TestWorkers.cpp  TestWorkers.h  UnitTests.cpp
tools/: CMakeLists.txt  bm_daq.cpp  bm_daq_gui.cpp  bm_daq_local_ctrl.cpp  bm_daq_remote_ctrl.cpp
